@@ -12,6 +12,9 @@
 # monitored with this plugin.
 #
 # $Log$
+# Revision 1.8.2.8  2005/03/07 19:23:07  jimmyo
+# Made linux/if_ work with more versions of iwlist (SF#1150954).
+#
 # Revision 1.8.2.7  2005/02/17 11:35:09  jimmyo
 # Typo fixes.
 #
@@ -117,7 +120,7 @@ if [ "$1" = "config" ]; then
 		ath*|wlan*|ra*)
 			echo -n "up.info Traffic of the $INTERFACE interface. Maximum speed is "
 			which iwlist >/dev/null 2>/dev/null || echo "undeterminable (please install iwlist)."
-			iwlist $INTERFACE rate 2>/dev/null | awk '/Current Bit Rate/ { split ($0, arr, "="); split (arr[2], arr2, "M"); print (arr2[1]*1000000) " bits per second.\nup.max " (arr2[1]*1000000) "\ndown.max "(arr2[1]*1000000); }'
+			iwlist $INTERFACE rate 2>/dev/null | awk '/Current Bit Rate/ { split ($0, arr, "[=:]"); split (arr[2], arr2, "M"); print (arr2[1]*1000000) " bits per second.\nup.max " (arr2[1]*1000000) "\ndown.max "(arr2[1]*1000000); }'
 			;;
 		*)
 			echo -n "up.info Traffic of the $INTERFACE interface. Maximum speed is "
