@@ -13,6 +13,7 @@ munin (work)
   * Plugins: All plugins using logtail now properly detect its format
     (Deb#297628).
   * Plugins: sunos/memory repaired (SF#1143610).
+  * Plugins: Made linux/if_ work with more versions of iwlist (SF#1150954).
 
 munin (1.2.0)
 
